# image_resizer_backend_task

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  setup.cfg
backend/: Dockerfile  entrypoint.production.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/images/: admin.py  forms.py  models.py  url_validators.py  urls.py  utils.py  views.py
backend/images/migrations/: 0001_initial.py
backend/templates/: base.html  image_detail.html  index.html  resize.html  upload.html
